--- a/configs/neural_net_ltt.yaml
+++ b/configs/neural_net_ltt.yaml
@@ -1,14 +1,14 @@
 signal: ["sig"]
-hidden_layers: [1000,1000]
-dropout_p: 0.4
+hidden_layers: [128,128]
+dropout_p: 0.3
 features: "wh_htt_ltt"
 classes: "wh_htt_ltt"
 tca: False
-tca_order: 1
+tca_order: 2
 learning_rate: 0.0001
 L2: 0.001
-batch_size: 500
+batch_size: 256
 early_stopping_patience: 50
 early_stopping_value: 0.1
 one_hot_parametrization: False
-date: "22_05_24"
+date: "11_07_24_bestHypermodel_allInputs_loose"
