--- a/configs/preselection_mmt_2016postVFP.yaml
+++ b/configs/preselection_mmt_2016postVFP.yaml
@@ -1,12 +1,13 @@
 # This is an example config containing information for the preselection
 
-ntuple_path: "root://cmsdcache-kit-disk.gridka.de//store/user/rschmieder/CROWN/ntuples/07_05_24_noDeltaRcutLep_alleras_allch/CROWNRun"
-friends: ["jetfakes_wpVSjet_Tight_07_05_24"]
+ntuple_path: root://cmsdcache-kit-disk.gridka.de//store/user/rschmieder/CROWN/ntuples/17_06_24_alleras_allch/CROWNRun
+friends: [jetfakes_wpVSjet_Medium_12_06_24_MediumvsJetvsL]
+event_split: odd
+output_path: "/ceph/rschmieder/WH_analysis/NN_analysis/03_07_24_medium"
 era: "2016postVFP"
 channel: "mmt"
 tree: "ntuple"
-event_split: "odd"
-output_path: "/ceph/rschmieder/WH_analysis/NN_analysis/22_05_24"
+
 
 processes:
     ggZZ:
@@ -88,7 +89,7 @@ processes:
 
 general_event_selection:
     tau_id_vs_ele: "id_tau_vsEle_VLoose_3 > 0.5"
-    tau_id_vs_mu: "id_tau_vsMu_Tight_3 > 0.5"
+    tau_id_vs_mu: "id_tau_vsMu_Medium_3 > 0.5"
     mu_1_pt: "pt_1 > 23"
     mu_2_pt: "pt_2 > 15"
     single_trigger: "(((trg_single_mu22 == 1) || (trg_single_mu22_tk == 1)  || (trg_single_mu22_eta2p1 == 1)  || (trg_single_mu22_tk_eta2p1 == 1)) && pt_1 > 23 && (abs(eta_1)<2.1))"
@@ -100,17 +101,17 @@ general_event_selection:
 
 
 special_event_selection:
-    tau_id_vs_jet: ["id_tau_vsJet_Tight_3 > 0.5", "(id_tau_vsJet_VVVLoose_3 > 0.5) && (id_tau_vsJet_Tight_3 < 0.5)"]
-    mu_2_idiso: ["muon_is_mediumid_2 > 0.5 && iso_2<0.15","(iso_2>0.15 || muon_is_mediumid_2<0.5)"]
+    tau_id_vs_jet: ["id_tau_vsJet_Medium_3 > 0.5", "(id_tau_vsJet_VVVLoose_3 > 0.5) && (id_tau_vsJet_Medium_3 < 0.5)"]
+    mu_2_idiso: ["muon_is_mediumid_2 > 0.5 && iso_2<0.15","((iso_2<0.5 && iso_2>0.15) || muon_is_mediumid_2<0.5)"]
 mc_weights:
     # general weights: string is passed directly as weight
     pileup: "puweight"
     prefire_wgt: "prefiring_wgt"
-    mu_iso: "(iso_wgt_mu_1*(iso_1<0.15)+1.*(iso_1>0.15))*(iso_wgt_mu_2*(iso_2<0.15)+1.*(iso_2>0.15))"
+    mu_iso: "(iso_wgt_mu_1*(iso_1<0.15)+1.*(iso_1>0.15))*(iso_wgt_mu_2*(iso_2<0.15)+1.*((iso_2<0.5 && iso_2>0.15)))"
     mu_id: "id_wgt_mu_1 * (id_wgt_mu_2*muon_is_mediumid_2 > 0.5 + 1.0*muon_is_mediumid_2 < 0.5)"
     tau_id_wgt_vs_ele: "(gen_match_3==5) * ((id_tau_vsEle_VLoose_3>0.5)*id_wgt_tau_vsEle_VLoose_3 + (id_tau_vsEle_VLoose_3<0.5)) + (gen_match_3!=5)"
-    tau_id_wgt_vs_mu: "(gen_match_3==5) * ((id_tau_vsMu_Tight_3>0.5)*id_wgt_tau_vsMu_Tight_3 + (id_tau_vsMu_Tight_3<0.5)) + (gen_match_3!=5)"
-    tau_id_wgt_vs_jet: "((gen_match_3==5)*((id_tau_vsJet_Tight_3>0.5)*id_wgt_tau_vsJet_Tight_3 + (id_tau_vsJet_Tight_3<0.5&&id_tau_vsJet_VVVLoose_3>0.5)*1.0) + (gen_match_3!=5))"
+    tau_id_wgt_vs_mu: "(gen_match_3==5) * ((id_tau_vsMu_Medium_3>0.5)*id_wgt_tau_vsMu_Medium_3 + (id_tau_vsMu_Medium_3<0.5)) + (gen_match_3!=5)"
+    tau_id_wgt_vs_jet: "((gen_match_3==5)*((id_tau_vsJet_Medium_3>0.5)*id_wgt_tau_vsJet_Medium_3 + (id_tau_vsJet_Medium_3<0.5&&id_tau_vsJet_VVVLoose_3>0.5)*1.0) + (gen_match_3!=5))"
     single_trigger: "(pt_1>=23 * trg_wgt_single_mu22)"
     
     # special weights: these are not generally applied, e.g. only for a specific process or era
@@ -150,4 +151,11 @@ output_feature:
     - "pt_vis"
     - "pt_W"
     - "metphi"
-
+    - "njets"
+    - "deltaPhi_WH"
+    - "jpt_1"
+    - "jpt_2"
+    - "jeta_1" 
+    - "jeta_2"
+    - "jphi_1"
+    - "jphi_2"
