--- a/configs/preselection_met_2016postVFP_base_medium.yaml
+++ b/configs/preselection_met_2016postVFP_base_medium.yaml
@@ -159,3 +159,6 @@ output_feature:
     - "jeta_2"
     - "jphi_1"
     - "jphi_2"
+    - "pt_123met"
+    - "electron_is_nonisowp80_2"
+    - "muon_is_tightid_1"
