--- a/configs/preselection_mmt_2016preVFP_base_medium.yaml
+++ b/configs/preselection_mmt_2016preVFP_base_medium.yaml
@@ -163,3 +163,6 @@ output_feature:
     - "jeta_2"
     - "jphi_1"
     - "jphi_2"
+    - "pt_123met"
+    - "muon_is_tightid_1"
+    - "muon_is_tightid_2"
