--- a/configs/neural_net_ltt.yaml
+++ b/configs/neural_net_ltt.yaml
@@ -3,7 +3,7 @@ hidden_layers: [128,128]
 dropout_p: 0.3
 features: "wh_htt_ltt"
 classes: "wh_htt_ltt"
-tca: False
+tca: false
 tca_order: 2
 learning_rate: 0.0001
 L2: 0.001
@@ -11,4 +11,4 @@ batch_size: 256
 early_stopping_patience: 50
 early_stopping_value: 0.1
 one_hot_parametrization: False
-date: "11_07_24_bestHypermodel_allInputs_loose"
+date: "27_03_25_Medium"
