--- a/configs/preselection_emt_2016postVFP_base_medium.yaml
+++ b/configs/preselection_emt_2016postVFP_base_medium.yaml
@@ -159,4 +159,7 @@ output_feature:
     - "jeta_2"
     - "jphi_1"
     - "jphi_2"
+    - "pt_123met"
+    - "electron_is_nonisowp80_1"
+    - "muon_is_tightid_2"
 
