--- a/configs/preselection_emt_2018_base_medium.yaml
+++ b/configs/preselection_emt_2018_base_medium.yaml
@@ -161,3 +161,6 @@ output_feature:
     - "jeta_2"
     - "jphi_1"
     - "jphi_2"
+    - "pt_123met"
+    - "electron_is_nonisowp80_1"
+    - "muon_is_tightid_2"
