--- a/configs/preselection_mmt_2018_base_medium.yaml
+++ b/configs/preselection_mmt_2018_base_medium.yaml
@@ -113,7 +113,7 @@ mc_weights:
     tau_id_wgt_vs_ele: "(gen_match_3==5) * ((id_tau_vsEle_VLoose_3>0.5)*id_wgt_tau_vsEle_VLoose_3 + (id_tau_vsEle_VLoose_3<0.5)) + (gen_match_3!=5)"
     tau_id_wgt_vs_mu: "(gen_match_3==5) * ((id_tau_vsMu_Medium_3>0.5)*id_wgt_tau_vsMu_Medium_3 + (id_tau_vsMu_Medium_3<0.5)) + (gen_match_3!=5)"
     tau_id_wgt_vs_jet: "((gen_match_3==5)*((id_tau_vsJet_Medium_3>0.5)*id_wgt_tau_vsJet_Medium_3 + (id_tau_vsJet_Medium_3<0.5&&id_tau_vsJet_VVVLoose_3>0.5)*1.0) + (gen_match_3!=5))"
-    single_trigger: "((pt_1>=25&&pt_1<=28) * trg_wgt_single_mu24)+(pt_1>28*trg_wgt_single_mu27)"
+    single_trigger: "trg_wgt_single_mu24ormu27"
     
     # special weights: these are not generally applied, e.g. only for a specific process or era
     # here the string is a needed information to apply the weight -> see corresponding functions
@@ -159,3 +159,6 @@ output_feature:
     - "jeta_2"
     - "jphi_1"
     - "jphi_2"
+    - "pt_123met"
+    - "muon_is_tightid_1"
+    - "muon_is_tightid_2"
