--- a/configs/preselection_mtt_2018.yaml
+++ b/configs/preselection_mtt_2018.yaml
@@ -1,10 +1,10 @@
 # This is an example config containing information for the preselection
 
 #variable arguments
-ntuple_path: root://cmsdcache-kit-disk.gridka.de//store/user/rschmieder/CROWN/ntuples/17_06_24_alleras_allch/CROWNRun
-friends: [jetfakes_wpVSjet_Medium_12_06_24_MediumvsJetvsL]
+ntuple_path: root://cmsdcache-kit-disk.gridka.de//store/user/rschmieder/CROWN/ntuples/28_04_25_nosysts/CROWNRun
+friends: [jetfakes_wpVSjet_Medium_27_02_25_MediumvsJetsvsL]
 event_split: odd
-output_path: "/ceph/rschmieder/WH_analysis/NN_analysis/03_07_24_medium"
+output_path: "/ceph/rschmieder/WH_analysis/NN_analysis/28_04_25_nosysts_29_04_25_Medium"
 #fixed arguments
 era: "2018"
 channel: "mtt"
@@ -103,7 +103,7 @@ mc_weights:
     tau_id_wgt_vs_ele: "(gen_match_3==5) * ((id_tau_vsEle_VLoose_3>0.5)*id_wgt_tau_vsEle_VLoose_3 + (id_tau_vsEle_VLoose_3<0.5)) + (gen_match_3!=5)"
     tau_id_wgt_vs_mu: "(gen_match_3==5) * ((id_tau_vsMu_Medium_3>0.5)*id_wgt_tau_vsMu_Medium_3 + (id_tau_vsMu_Medium_3<0.5)) + (gen_match_3!=5)"
     tau_id_wgt_vs_jet: "((q_1*q_2>0.5)*((gen_match_3==5)*((id_tau_vsJet_Medium_3>0.5)*id_wgt_tau_vsJet_Medium_3) + (gen_match_3!=5))*((gen_match_2==5)*((id_tau_vsJet_Medium_2>0.5)*id_wgt_tau_vsJet_Medium_2+(id_tau_vsJet_Medium_2<0.5&&id_tau_vsJet_VVVLoose_2>0.5)*1.0) + (gen_match_2!=5))+((q_1*q_2<0.5)*((gen_match_3==5)*((id_tau_vsJet_Medium_3>0.5)*id_wgt_tau_vsJet_Medium_3+(id_tau_vsJet_Medium_3<0.5&&id_tau_vsJet_VVVLoose_3>0.5)*1.0) + (gen_match_3!=5)) * ((gen_match_2==5)*((id_tau_vsJet_Medium_2>0.5)*id_wgt_tau_vsJet_Medium_2) + (gen_match_2!=5))))"
-    single_trigger: "((pt_1>=25&&pt_1<=28) * trg_wgt_single_mu24)+(pt_1>28*trg_wgt_single_mu27)"
+    single_trigger: "trg_wgt_single_mu24ormu27"
     
     # special weights: these are not generally applied, e.g. only for a specific process or era
     # here the string is a needed information to apply the weight -> see corresponding functions
@@ -144,10 +144,10 @@ output_feature:
     - "metphi"
     - "pt_123met"
     - "njets"
-    - "deltaPhi_WH"
     - "jpt_1"
     - "jpt_2"
     - "jeta_1" 
     - "jeta_2"
     - "jphi_1"
     - "jphi_2"
+    - "muon_is_tightid_1"
